# drasi-platform

./: .dockerignore  .gitignore  .gitmodules  ACTION-PLAN-ISSUE-345.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GSOC_PLAN.md  INVESTIGATION_NOTE.md  ISSUE-345-INVESTIGATION-FRAMEWORK.md  LICENSE  Makefile  ORACLE_IMPLEMENTATION_SUMMARY.md  RESEARCH-README.md  SECURITY.md  ingress-support.md  readme.md
.githooks/: pre-commit
control-planes/kubernetes_provider/: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  GEMINI.md  Makefile  deploy-ns.yaml  deploy.yaml
control-planes/kubernetes_provider/src/: AGENTS.md  main.rs  models.rs
control-planes/kubernetes_provider/src/actors/: AGENTS.md  mod.rs  querycontainer_actor.rs  reaction_actor.rs  source_actor.rs
control-planes/kubernetes_provider/src/controller/: AGENTS.md  mod.rs  reconciler.rs
control-planes/kubernetes_provider/src/monitor/: mod.rs
control-planes/kubernetes_provider/src/spec_builder/: AGENTS.md  identity.rs  mod.rs  query_container.rs  reaction.rs  source.rs
control-planes/mgmt_api/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile  deploy.yaml  openapi.yaml
control-planes/mgmt_api/src/: AGENTS.md  lib.rs  main.rs
control-planes/mgmt_api/src/api/: AGENTS.md  mod.rs
control-planes/mgmt_api/src/change_stream/: AGENTS.md  mod.rs  redis_change_stream.rs  tests.rs
control-planes/mgmt_api/src/domain/: AGENTS.md  debug_service.rs  mappings.rs  mod.rs  models.rs  query_actor_service.rs  result_service.rs
control-planes/mgmt_api/src/persistence/: AGENTS.md  mod.rs  provider_repository.rs  query_container_repository.rs  query_repository.rs  reaction_repository.rs  source_provider_repository.rs  source_repository.rs
control-planes/resource_provider_api/: AGENTS.md  Cargo.toml
control-planes/resource_provider_api/src/: lib.rs  models.rs
infrastructure/: Cargo.toml  copilot-instructions.md
infrastructure/comms-abstractions/: Cargo.toml
infrastructure/comms-abstractions/src/: comms.rs
infrastructure/comms-dapr/: Cargo.toml
infrastructure/comms-dapr/src/: comms.rs  lib.rs
infrastructure/comms-http/: Cargo.toml
infrastructure/comms-http/src/: lib.rs
infrastructure/drasi-comms-abstractions/src/: comms.rs
infrastructure/drasi-comms-dapr/: Cargo.toml
query-container/: AGENTS.md  Cargo.toml  Makefile  copilot-instructions.md
query-container/.cargo/: config.toml
query-container/publish-api/: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile  remote-build.sh
query-container/publish-api/src/: main.rs  publisher.rs
query-container/query-host/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile  rustfmt.toml
query-container/query-host/examples/: query-runtime-config.yaml
query-container/query-host/src/: api.rs  future_consumer.rs  index_factory.rs  main.rs  models.rs  partition_selector.rs  query_actor.rs  query_worker.rs  result_publisher.rs  source_client.rs
query-container/query-host/src/change_stream/: AGENTS.md  mod.rs  publisher.rs  redis_change_stream.rs  tests.rs
query-container/view-svc/: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile  readme.md
query-container/view-svc/src/: api.rs  main.rs  models.rs  mongo_view_store.rs  view_actor.rs  view_store.rs  view_store_factory.rs  view_worker.rs
query-container/view-svc/src/change_stream/: mod.rs  redis_change_stream.rs  tests.rs
reactions/dapr-agents-router/: Dockerfile  README.md  pyproject.toml  reaction.yaml
reactions/dapr-agents-router/src/: config.py  formatter.py  main.py  mcp_server.py  router.py
reactions/dapr-agents-router/tests/: test_formatter.py  test_router.py
reactions/sdk/python/: .dockerignore  Makefile  README.md  pyproject.toml
reactions/sdk/python/drasi/: management_client.py
reactions/sdk/python/drasi_reaction/: logger.py  sdk.py
source/m365-reactivator/: .dockerignore  Cargo.toml  Dockerfile
source/m365-reactivator/src/: api.rs  document_cache.rs  models.rs  publisher.rs
sources/kubernetes/kubernetes-proxy/: Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile
sources/kubernetes/kubernetes-proxy/src/: main.rs
sources/kubernetes/kubernetes-reactivator/: Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile  Program.cs  kubernetes-reactivator.csproj
sources/kubernetes/kubernetes-reactivator/Controllers/: AcquireController.cs
sources/kubernetes/kubernetes-reactivator/Models/: AcquireRequest.cs  ChangeNotification.cs
sources/kubernetes/kubernetes-reactivator/Properties/: launchSettings.json
sources/kubernetes/kubernetes-reactivator/Services/: GraphChangeMapper.cs  ISequenceGenerator.cs  IStateFetcher.cs  NamespaceWatcher.cs
sources/kubernetes/kubernetes-reactivator/src/: main.rs
sources/sdk/rust/: Cargo.toml  Makefile  readme.md
sources/sdk/rust/example/: query.yaml  readme.md  source-provider.yaml  source.yaml
sources/sdk/rust/src/: dapr_publisher.rs  dapr_statestore.rs  debug_publisher.rs  lib.rs  memory_statestore.rs  models.rs  proxy.rs  reactivator.rs  telemetry.rs
sources/shared/change-dispatcher/: Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile
sources/shared/change-dispatcher/src/: change_dispatcher_config.rs  main.rs
sources/shared/change-router/: Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile
sources/shared/change-router/src/: change_router_config.rs  main.rs  state_manager.rs  subscriber_map.rs  subscribers.rs
sources/shared/query-api/: Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile  package-lock.json  package.json  queryApi.js  readme.md
sources/shared/query-api/src/: api.rs  control_event.rs  main.rs  query_api_config.rs
(+1666 files in other folders)
