[package]
name = "kubernetes_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dapr = { git = "https://github.com/danielgerlag/rust-sdk.git", branch = "actors-refactor" }
resource_provider_api = { path = "../resource_provider_api" }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
kube = { version = "0.87.1", features = ["default", "runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_26", "schemars"] }
hashers = "1.0.1"
either = "1.8.1"
futures = "0.3"
once_cell = "1.17.1"
async-trait = "0.1.68"
axum = "0.6.19"
kube-derive = "0.87.1"
schemars = "0.8.15"

