[package]
name = "kubernetes_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dapr = "=0.15.1"
dapr-macros = { version = "=0.15.1", package = "dapr-macros" }
resource_provider_api = { path = "../resource_provider_api" }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
kube = { version = "0.87.1", features = ["default", "runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_26", "schemars"] }
hashers = "1.0.1"
sha1 = "0.10.5"
either = "1.8.1"
futures = "0.3"
once_cell = "1.17.1"
async-trait = "0.1.68"
axum = { version = "0.7.5", features = ["macros"] }
kube-derive = "0.87.1"
schemars = "0.8.15"
bytes = "1.7.1"
uuid = { version = "1.10.0", features = ["v4"] }

