[package]
name = "drasi-comms-abstractions"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bytes = "1.7.1"
futures = "0.3.28"
futures-util = "0.3.28"
serde_json = "1.0.117"
