[package]
name = "drasi-comms-dapr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
drasi-comms-abstractions = { path = "../comms-abstractions"}
reqwest = { version = "0.11.24", features = ["blocking", "json"]}
serde_json = "1.0.117"
