[package]
name = "drasi-comms-dapr"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bytes = "1.7.2"
drasi-comms-abstractions = { path = "../comms-abstractions"}
reqwest = { version = "0.12.9", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1.0.117"
