[package]
name = "drasi-comms-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bytes = "1.7.2"
drasi-comms-abstractions = { path = "../comms-abstractions"}
reqwest = { version = "0.12.9" }
reqwest-streams = { version = "0.8.2", features=["json", "csv", "protobuf"] }
futures = "0.3.28"
futures-util = "0.3.28"
serde_json = "1.0.117"
async-stream = "0.3.5"