[package]
name = "publish-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.6", features = ["full"] }
futures = "0.3"
async-trait = "0.1.68"
axum = { version = "0.8.0", features = ["macros", "http1", "tokio"] }
redis = { version = "0.32.0", features = ["tokio-comp"] }
tracing-subscriber = "0.3.17"

[profile.release]
lto = true