[package]
name = "publish-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.6", features = ["full"] }
futures = "0.3"
async-trait = "0.1.68"
axum = { version = "0.7.5", features = ["macros", "http1", "tokio"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
thiserror = "1.0"
tracing-subscriber = "0.3.17"