[package]
name = "query-host"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-query-core = { path = "./drasi-core/drasi-query-core" }
drasi-query-cypher = { path = "./drasi-core/drasi-query-cypher" }
drasi-query-ast = { path = "./drasi-core/drasi-query-ast" }
drasi-query-middleware = { path = "./drasi-core/drasi-query-middleware" }
drasi-query-index-garnet = { path = "./drasi-core/drasi-query-index-garnet" }
drasi-query-index-rocksdb = { path = "./drasi-core/drasi-query-index-rocksdb" }
dapr = { git = "https://github.com/danielgerlag/rust-sdk.git", branch = "actors-refactor" }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
sha1 = "0.10.5"
either = "1.8.1"
futures = "0.3"
once_cell = "1.17.1"
async-trait = "0.1.68"
reqwest =  { version = "0.11.18", features = ["json"] }
gethostname = "0.4.3"
axum = "0.6.19"
redis = { version = "0.23.0", features = ["tokio-comp"] }
opentelemetry = {version = "0.20", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.13", features = ["trace", "metrics"]}
opentelemetry-semantic-conventions = "0.12"
opentelemetry_sdk = {version = "0.20", features = ["rt-tokio"]}
tracing = "0.1.37"
tracing-opentelemetry = "0.21"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

[dev-dependencies]
mockall = "0.12"
uuid = {version = "1.4.1", features = ["v4"]}

