[package]
name = "query-host"
version = "0.3.0"
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drasi-core = { path = "./drasi-core/core" }
drasi-lib = { path = "./drasi-core/lib" }
drasi-query-cypher = { path = "./drasi-core/query-cypher" }
drasi-query-gql = { path = "./drasi-core/query-gql" }
drasi-query-ast = { path = "./drasi-core/query-ast" }
drasi-functions-cypher = { path = "./drasi-core/functions-cypher" }
drasi-functions-gql = { path = "./drasi-core/functions-gql" }
drasi-middleware = { path = "./drasi-core/middleware" }
drasi-index-garnet = { path = "./drasi-core/components/indexes/garnet" }
drasi-index-rocksdb = { path = "./drasi-core/components/indexes/rocksdb" }
drasi-source-platform = { path = "./drasi-core/components/sources/platform" }
drasi-reaction-platform = { path = "./drasi-core/components/reactions/platform" }
drasi-bootstrap-platform = { path = "./drasi-core/components/bootstrappers/platform" }

dapr = "=0.15.1"
dapr-macros = {version = "=0.15.1", package = "dapr-macros"}
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
either = "1.8.1"
futures = "0.3"
once_cell = "1.17.1"
async-trait = "0.1.68"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
reqwest-streams = { version = "0.8.2", features=["json", "csv", "protobuf"] }
gethostname = "0.4.3"
axum = "0.7.5"
redis = { version = "0.23.0", features = ["tokio-comp"] }
opentelemetry = {version = "0.20", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.13", features = ["trace", "metrics"]}
opentelemetry-semantic-conventions = "0.12"
opentelemetry_sdk = {version = "0.20", features = ["rt-tokio"]}
tracing = "0.1.37"
tracing-opentelemetry = "0.21"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
thiserror = "1.0.63"
async-stream = "0.3.5"

[dev-dependencies]
mockall = "0.12"
uuid = {version = "1.4.1", features = ["v4"]}