[package]
name = "view-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dapr = "=0.15.1"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
sha1 = "0.10.5"
futures = "0.3"
async-trait = "0.1.68"
gethostname = "0.4.3"
axum = "0.7.5"
axum-streams = { version = "0.18.1", features=["json"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
opentelemetry = {version = "0.20.0", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.13.0", features = ["trace", "metrics"]}
opentelemetry-semantic-conventions = "0.12.0"
opentelemetry_sdk = {version = "0.20.0", features = ["rt-tokio"]}
tracing = "0.1.37"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
cloudevents-sdk = "0.7.0"
thiserror = "1.0.49"
fastmurmur3 = "0.2.0"
mongodb = "2.6.0"
hashers = "1.0.1"
siphasher = "1.0.0"
async-stream = "0.3.5"

[dev-dependencies]
uuid = {version = "1.4.1", features = ["v4"]}
