[package]
name = "view-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dapr = "=0.16.2"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
futures = "0.3"
async-trait = "0.1.68"
gethostname = "0.5.0"
axum = "0.8.0"
axum-streams = { version = "0.21.0", features=["json"] }
redis = { version = "0.32.0", features = ["tokio-comp"] }
opentelemetry = {version = "0.30.0", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.30.0", features = ["trace", "metrics"]}
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = {version = "0.30.0", features = ["rt-tokio"]}
tracing = "0.1.37"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
cloudevents-sdk = "0.8.0"
thiserror = "1.0.49"
fastmurmur3 = "0.2.0"
mongodb = "2.6.0"
hashers = "1.0.1"
siphasher = "1.0.0"
async-stream = "0.3.5"

[dev-dependencies]
uuid = {version = "1.4.1", features = ["v4"]}

[profile.release]
lto = true