[package]
name = "m365-reactivator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
azure_core = "0.14.0"
azure_storage = "0.14.0"
azure_storage_queues = "0.14.0"
chrono = {version = "0.4.29", features = ["serde"]}
dapr = { git = "https://github.com/danielgerlag/rust-sdk.git", branch = "actors-refactor" }
env_logger = "0.10.0"
futures = "0.3.28"
graph-rs-sdk = "1.1.1"
log = "0.4.20"
serde = "1.0.188"
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["full"]}
