[package]
name = "kubernetes-reactivator"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"

[lints.clippy]
print_stdout = "warn"
unwrap_used = "warn"
uninlined_format_args = "warn"
module_inception = "allow"
ptr_arg = "allow"
type_complexity = "allow"
large_enum_variant = "allow"

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
drasi-source-sdk = "0.1.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.22"
kube = { version = "0.97.0", features = ["default", "runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
futures = "0.3"
once_cell = "1.20.2"
async-trait = "0.1.83"
env_logger = "0.11.6"
home = "=0.5.9"
