[package]
name = "drasi-source-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
axum = { version = "0.7.9", features = ["http1", "macros", "tokio"] }
axum-streams = { version = "0.19.0", features=["json"] }
log = "0.4.22"
tokio = {version = "1.40.0", features = ["full"]}
async-stream = "0.3.5"
futures = "0.3"
dapr = "0.15.1"
async-trait = "0.1.83"
thiserror = "2.0.5"
