[package]
name = "drasi-source-sdk"
version = "0.1.22"
edition = "2021"
license = "Apache-2.0"
description = "Source SDK for Drasi"
repository = "https://github.com/drasi-project/drasi-platform"
keywords = ["drasi"]
categories = ["database"]
readme = "readme.md"    

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
axum = { version = "0.8.0", features = ["http1", "macros", "tokio"] }
axum-streams = { version = "0.21.0", features=["json"] }
log = "0.4.22"
tokio = {version = "1.40.0", features = ["full"]}
async-stream = "0.3.5"
futures = "0.3"
dapr = "0.16.0"
async-trait = "0.1.83"
thiserror = "2.0.5"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
opentelemetry = {version = "0.30", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.30", features = ["trace", "metrics"]}
opentelemetry-semantic-conventions = "0.30"
opentelemetry_sdk = {version = "0.30", features = ["rt-tokio"]}
tracing = "0.1.37"
tracing-opentelemetry = "0.31"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
env_logger = "0.11.5"
retry = "2.0.0"
