[package]
name = "change-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros", "http1", "tokio"] }
chrono = "0.4.33"
dapr = "=0.15.1"
dapr-macros = {version = "=0.15.1", package = "dapr-macros"}
drasi-comms-abstractions = { path = "../../../infrastructure/comms-abstractions" }
drasi-comms-dapr = { path = "../../../infrastructure/comms-dapr" }
env_logger = { version = "0.11.2" } 
futures = "0.3.30"
log = "0.4.20"
proc-macro2 = "1.0.81"
reqwest = "0.12.4"
serde_json = "1.0"
tokio = { version = "1.6", features = ["full"] }
tracing-opentelemetry = "0.21.0"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
uuid = {version = "1.7.0", features = ["v4"]}
serde = "1.0.202"

