[package]
name = "query-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http1", "macros", "tokio"] }
chrono = "0.4.38"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.40.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["cors"] }
drasi-comms-abstractions = { path = "../../../infrastructure/comms-abstractions" }
drasi-comms-dapr = { path = "../../../infrastructure/comms-dapr" }
serde_json = "1.0.128"

[profile.release]
lto = true
