[package]
name = "query-api"
version = "0.1.0"
edition = "2021"

[lints.rust]
warnings = "deny"
unused = "allow"

[lints.clippy]
print_stdout = "warn"
unwrap_used = "warn"
uninlined_format_args = "warn"
module_inception = "allow"
ptr_arg = "allow"
type_complexity = "allow"
large_enum_variant = "allow"

[dependencies]
axum = { version = "0.7.5", features = ["http1", "macros", "tokio"] }
axum-streams = { version = "0.19.0", features=["json"] }
chrono = "0.4.38"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.40.0", features = ["full"]}
tower-http = { version = "0.6.2", features = ["cors"] }
drasi-comms-abstractions = { path = "../../../infrastructure/comms-abstractions" }
drasi-comms-dapr = { path = "../../../infrastructure/comms-dapr" }
drasi-comms-http = { path = "../../../infrastructure/comms-http" }
serde_json = "1.0.128"
async-stream = "0.3.5"
futures = "0.3"
env_logger = "0.11"

[profile.release]
lto = true